spacing fix2

--- a/subPages/viewerStyle.css
+++ b/subPages/viewerStyle.css
@@ -9,7 +9,7 @@ h1 {
     font-family: Arial, sans-serif;
     text-align: center;
     height: 37.5px;
-    margin-left: 30px ;
+    margin-left: 20px ;
     font: bold;
     color: white;
 } 
@@ -28,7 +28,7 @@ iframe {
 img {
     max-width: 65px;
     margin-right: -20px;
-    /* margin-left: 40px; */
+    margin-left: 75px;
     border-radius: 10px;
 }
 #top {
